--- a/css/main.css
+++ b/css/main.css
@@ -46,12 +46,18 @@ section{
 }
 /*seccion de agregar lista*/
 .listName{
-	background: 0 0;
-    border-color: transparent;
-    box-shadow: none;
     cursor: pointer;
-    display: none;
+    background: rgba(0,0,0,.05);
+    border-color: #aaa;
+    box-shadow: inset 0 1px 8px rgba(0,0,0,.15);
+    display: block;
     margin: 0;
+    -webkit-transition: margin 85ms ease-in,background 85ms ease-in;
+    transition: margin 85ms ease-in,background 85ms ease-in;
+    width: 100%;
+    border-radius: 3px;
+    min-height: 34px;
+    padding: 7px;
 }
 .wrapperList.modAdd {
     height: auto;
