--- a/css/main.css
+++ b/css/main.css
@@ -118,6 +118,10 @@ section{
   text-decoration: none;
   background-color: #E2E4E6;
 }
+.newCard:hover{
+  background-color: #CCD1D4;
+  color: #9D9D9D;
+}
 .contenedor{
   display: inline-block;
   vertical-align: top;
@@ -129,6 +133,17 @@ section{
   background-color: #E2E4E6;
   word-wrap: break-word;
   width: 270px;
+}
+.contenedorTarjeta{
+  padding:8px;
+}
+.textArea{
+  padding: 6px 6px 2px 8px;
+  border-radius: 3px;
+  display: block;
+  width: 100%;
+  height: 80px;
+  color: black;
 }
 
 
